[build-system]
requires = ["setuptools>=51.2", "wheel>=0.36.2", "setuptools_scm>=6.3.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/decisionengine/framework/version.py"

[tool.pytest.ini_options]
minversion = "6.0"
# -n is used by pytest-xdist. "pytest: error: unrecognized arguments: -n" means that the plugin is missing. Install the development dependencies
# pytest-xdist is not _mandatory_ for the tests to work, but it is recommended
addopts = "-l -v --durations=30 --durations-min=0.05 --strict-config --strict-markers --showlocals"
log_level = "debug"
markers = [
    "external: tests with external dependencies (e.g. Redis, Condor, etc.)",
    "redis: tests that require a running Redis server as a dependency"
]
testpaths = "src/decisionengine"
required_plugins = ["pytest-timeout>=1.4.2", "pytest-postgresql >= 3.0.0"]
timeout = 90

[tool.black]
line-length = 120
target-version = ['py36']

[tool.isort]
src_paths = ["doc", "src"]
py_version = 36
profile = "black"
line_length = 120
combine_star = "True"
float_to_top = "True"
order_by_type = "True"
dedup_headings = "True"
known_first_party = ["decisionengine"]
lines_between_types = 1
force_alphabetical_sort_within_sections = "True"
