[build-system]
requires = ["setuptools>=72.1", "wheel>=0.36.2", "setuptools_scm>=6.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "decisionengine"
dynamic = ["version"]
# version = "1.1.0"
requires-python = ">=3.9"
description = "The HEPCloud Decision Engine Framework"
readme = "README.md"
license = {text ="Apache-2.0"}
authors = [
    { name = "Fermilab" },
]
dependencies = [
    "cherrypy >= 18.6.0",
    "jsonnet >= 0.20.0",
    "kombu[redis] >= 5.2.0rc1",
    "numpy == 1.19.5; python_version <= '3.6'",
    "numpy >= 1.22, < 2.0.0; python_version >= '3.7'",
    "pandas == 1.1.5; python_version <= '3.6'",
    "pandas >= 1.1.5, < 2.0.0; python_version >= '3.7' and platform_python_implementation == 'CPython'",
    "prometheus-client >= 0.10.0",
    "psutil >= 5.8.0",
    "psycopg2-binary >= 2.8.6; platform_python_implementation == 'CPython'",
    "sqlalchemy >= 1.4.48, < 2.0.0",
    "structlog >= 21.1.0",
    "tabulate >= 0.8.7",
    "toposort >= 1.6",
    "typing_extensions >= 4.1.1",
]

[project.optional-dependencies]
develop = [
    "coverage >= 6.1.2",
    "flake8 >= 6.0.0, < 7.0.0",
    "importlib_resources >= 5.1.2; python_version <= '3.8'",
    "packaging >= 20.4",
    "pre-commit >= 2.13.0",
    "pylint >= 2.7.4",
    "pytest >= 7.0.0, < 8.0",
    "pytest-cov >= 2.11.1",
    "pytest-postgresql >= 5.0.0, < 6.0.0",
    "pytest-timeout >= 1.4.2",
    "pytest-xdist[psutil] >= 2.3.0",
    "reuse >= 1.1.2",
    "setuptools >= 51.2",
    "setuptools_scm >= 6.3.1",
    "sphinx >= 3.5.3",
    "sphinx_rtd_theme >= 0.5.1",
    "toml >= 0.10.2",
    "wheel >= 0.36.2",
]

[project.scripts]
de-client = "decisionengine.framework.engine.de_client:console_scripts_main"
de-logparser = "decisionengine.framework.util.logparser:console_scripts_main"
de-query-tool = "decisionengine.framework.engine.de_query_tool:console_scripts_main"
de-reaper = "decisionengine.framework.util.reaper:main"
decisionengine = "decisionengine.framework.engine.DecisionEngine:main"

[project.urls]
# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-project-urls
homepage = "http://hepcloud.fnal.gov/"
source = "https://github.com/HEPCloud/decisionengine"
documentation = "https://hepcloud.github.io/decisionengine/"
releasenotes = "https://hepcloud.github.io/decisionengine/release_notes.html"
issues = "https://github.com/HEPCloud/decisionengine/issues"

[tool.setuptools]
# https://setuptools.pypa.io/en/latest/references/keywords.htm
#packages = ["myproj", "myproj.algorithms", "myproj.configs", ...]
#package-dir = { "" = "src" }  # src-layont is found by default
#[tool.setuptools.package-dir]
#myproj = "src/myproj"
#myproj.algorithms = "algorithms"
#myproj.configs = "configs"
#[tool.setuptools.package-data]
#"" = ["*.yml", ...]

[tool.setuptools_scm]
write_to = "src/decisionengine/framework/version.py"

[tool.pytest.ini_options]
minversion = "6.0"
# -n is used by pytest-xdist. "pytest: error: unrecognized arguments: -n" means that the plugin is missing. Install the development dependencies
# pytest-xdist is not _mandatory_ for the tests to work, but it is recommended
addopts = "-l -v --durations=30 --durations-min=0.05 --strict-config --strict-markers --showlocals"
log_level = "debug"
markers = [
    "external: tests with external dependencies (e.g. Redis, Condor, etc.)",
    "redis: tests that require a running Redis server as a dependency"
]
testpaths = "src/decisionengine"
required_plugins = ["pytest-timeout>=1.4.2", "pytest-postgresql >= 3.0.0"]
timeout = 90

[tool.black]
line-length = 120
target-version = ['py39']

[tool.codespell]
exclude-file = ".codespell/ignore_lines.txt"
ignore-words = ".codespell/ignore_words.txt"

[tool.isort]
src_paths = ["doc", "src"]
py_version = 39
profile = "black"
line_length = 120
combine_star = "True"
float_to_top = "True"
order_by_type = "True"
dedup_headings = "True"
known_first_party = ["decisionengine"]
lines_between_types = 1
force_alphabetical_sort_within_sections = "True"

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
